TestSuite/errors/err0009.pas
procedure Test;
begin
end;

var a : integer;
begin
a := Test;
end.